# quanteo

./: .gitignore  README.md  pyproject.toml
examples/: asian_options_and_variance_reduction.ipynb  european_options_and_greeks.ipynb
quanteo/models/: __init__.py  base_model.py  gbm.py
quanteo/options/: __init__.py  asian.py  base_option.py  european.py  sum_prices.py
quanteo/pricers/: __init__.py  analytical.py  base_pricer.py  controlvariate_mc.py  monte_carlo.py  qmc.py
quanteo/risk/: __init__.py  base_risk.py  bsm_risk.py  finite_differences.py
tests/: test.ipynb
