[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quanteo"
version = "0.1.3"
description = "A quantitative options pricing and risk library."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Matteo Ientile", email = "matteoientile@gmail.com"}
]
dependencies = [
    "numpy",
    "scipy"
]

[project.urls]
"Homepage" = "https://github.com/matteoientile/quanteo"